fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -76,18 +76,18 @@ body{
 	position: fixed;
 	top:115px;
 	left:0;
-	width:25%;
+	width: 27%;
 	height:100%;
-	padding-top:8%;	
-	background-color:#1E2C22;		
+	padding-top:8%;
+	background-color:#1E2C22;
 }
 
 .main{
 	position:relative;
-	top:110px;
+	top: 113px;
 	left:350px;
-	width:73%;
-	height:100%;
+	width: 93%;
+	height: 100%;
 }
 
 .header h1{
